2004-11-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: began working on the new
	"enable_iface_with_config" directive

2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: fix some functions that got
	broken with the new xml format, only save the interfaces if they
	have changed

2004-11-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in, network-conf.in: added "detect_essids" directive

2004-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_interfaces_set): really delete the
	interfaces that aren't configured.
	* replace.pl.in: somewhat improve interfaces deleting in debian

2004-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: more silly improvements for storing correctly the
	information

2004-11-10  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: made it able to store again the configuration, still
	some checking has to be done, though

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: removed "wireless_device" tags, they're no longer
	used. (gst_network_get_default_gatewaydev) added.

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: modified XML format for the new
	network tool

2004-11-05  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in, partition.pl.in: added DVD support 

2004-11-05  Link Dupont  <link.dupont@gmail.com>

	* platform.pl.in: Added archlinux to the list
	* users-conf.in: added support for archlinux 0.7

2004-11-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* file.pl.in (gst_file_buffer_load): return a void array instead of
	undef if the file doesn't exist, it can be filled later. Fixes
	#157331

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-11-01  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in: fixed floppy drive detection
